--- a/nick/app.css
+++ b/nick/app.css
@@ -1946,55 +1946,98 @@
   flex-direction: row;
 }
 
+.gallery .main-pic .prev:hover,
+.gallery .main-pic .next:hover {
+  opacity: 1;
+  -ms-filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
+  filter: alpha(opacity=100);
+}
+
+.gallery .main-pic .prev.next,
+.gallery .main-pic .next.next {
+  background-image: url(images/right-arrow-large.svg);
+  left: auto;
+  right: 0;
+}
+
+.gallery .main-pic .prev,
+.gallery .main-pic .next {
+  display: block;
+  position: absolute;
+  top: 50%;
+  left: 0;
+  width: 80px;
+  height: 80px;
+  background: url(images/left-arrow-large.svg) no-repeat center;
+  background-size: 30px;
+  opacity: 0.8;
+  -ms-filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=80);
+  filter: alpha(opacity=80);
+  -ms-transform: translateY(-50%);
+  -moz-transform: translateY(-50%);
+  -webkit-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
+
 .gallery .main-pic {
   height: 100%;
   cursor: pointer;
+  position: relative;
   -ms-flex: 1;
   -moz-flex: 1;
   -webkit-flex: 1;
   flex: 1;
 }
 
-.gallery .thumbnails .inner > div:not(:last-child) {
+.gallery .thumbnails .inner > img:not(:last-child) {
   margin-right: 0.75rem;
 }
 
-.gallery .thumbnails .inner > div:hover {
+.gallery .thumbnails .inner > img:hover {
+  opacity: 0.8;
+  -ms-filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=80);
+  filter: alpha(opacity=80);
+  -ms-transition: opacity 0.1s;
+  -moz-transition: opacity 0.1s;
+  -webkit-transition: opacity 0.1s;
+  transition: opacity 0.1s;
+}
+
+.gallery .thumbnails .inner > img.active {
   opacity: 1;
   -ms-filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
   filter: alpha(opacity=100);
+  -ms-transition: opacity 0.1s;
+  -moz-transition: opacity 0.1s;
+  -webkit-transition: opacity 0.1s;
+  transition: opacity 0.1s;
 }
 
-.gallery .thumbnails .inner > div.active {
-  opacity: 1;
-  -ms-filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
-  filter: alpha(opacity=100);
-}
-
-.gallery .thumbnails .inner > div {
-  width: 100px;
+.gallery .thumbnails .inner > img {
   height: 100%;
   border-radius: 5px;
-  display: inline-block;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-origin: content-box;
   cursor: pointer;
-  opacity: 0.75;
-  -ms-filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=75);
-  filter: alpha(opacity=75);
+  opacity: 0.6;
+  -ms-filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=60);
+  filter: alpha(opacity=60);
+  -ms-transition: opacity 0.1s;
+  -moz-transition: opacity 0.1s;
+  -webkit-transition: opacity 0.1s;
+  transition: opacity 0.1s;
 }
 
 .gallery .thumbnails .inner {
   height: 100%;
-  overflow-x: scroll;
-  overflow-y: hidden;
-  white-space: nowrap;
+  display: flex;
+  min-width: 0;
 }
 
 .gallery .thumbnails {
-  height: 80px;
+  height: 60px;
+  overflow-x: scroll;
+  overflow-y: hidden;
+  display: flex;
+  justify-content: center;
 }
 
 @media (max-width: 767.98px) {
@@ -2110,6 +2153,7 @@
 .gallery-scroll-wrap .gallery-scroll {
   overscroll-behavior-x: contain;
   height: 50vh;
+  width: 100%;
   scroll-snap-type: x mandatory;
   -webkit-overflow-scrolling: touch;
   overflow-x: scroll;
@@ -2122,11 +2166,15 @@
 .ticks {
   display: flex;
   justify-content: center;
-  margin: 1rem 0;
+  margin: 1rem 0 0.75rem 0;
   -ms-flex-direction: row;
   -moz-flex-direction: row;
   -webkit-flex-direction: row;
   flex-direction: row;
+  -ms-flex-wrap: wrap;
+  -moz-flex-wrap: wrap;
+  -webkit-flex-wrap: wrap;
+  flex-wrap: wrap;
 }
 
 .ticks .tick.active {
@@ -2141,10 +2189,73 @@
   border-radius: 50%;
   background-color: var(--dark);
   box-shadow: 0px 0px 1px 1px white;
-  margin: 0 4px;
+  margin: 0 4px 4px 4px;
   opacity: 0.1;
   -ms-filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=10);
   filter: alpha(opacity=10);
+}
+
+.gallery-mobile-zoom {
+  border-radius: 0 !important;
+  width: 100%;
+  touch-action: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 1;
+  background: #000;
+  display: flex;
+  justify-content: center;
+  -ms-flex-direction: column;
+  -moz-flex-direction: column;
+  -webkit-flex-direction: column;
+  flex-direction: column;
+}
+
+.gallery-mobile-zoom > a {
+  position: absolute;
+  top: 0;
+  right: 0;
+  color: #fff;
+  width: 2.5rem;
+  height: 2.5rem;
+  z-index: 5;
+  font-size: 24px;
+  line-height: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.gallery-mobile-zoom .gallery-scroll-wrap .gallery-scroll .pic {
+  height: 100%;
+}
+
+.gallery-mobile-zoom .gallery-scroll-wrap .gallery-scroll {
+  height: 100%;
+}
+
+.gallery-mobile-zoom .gallery-scroll-wrap {
+  -ms-flex: 1;
+  -moz-flex: 1;
+  -webkit-flex: 1;
+  flex: 1;
+}
+
+.gallery-mobile-zoom .ticks .tick.active {
+  opacity: 1;
+  -ms-filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
+  filter: alpha(opacity=100);
+}
+
+.gallery-mobile-zoom .ticks .tick {
+  opacity: 0.5;
+  -ms-filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=50);
+  filter: alpha(opacity=50);
+  background-color: white;
+  box-shadow: 0px 0px 1px 1px var(--dark);
 }
 
 .attestation-badges {
@@ -4455,6 +4566,7 @@
 
   .settings {
     padding-top: 2rem;
+    padding-bottom: 4rem;
   }
 }
 
@@ -11742,130 +11854,6 @@ svg.help-icon:hover path {
 
 .mobile-modal-light .messages-modal {
   margin: 0;
-}
-
-.browse-modal {
-  font-size: 16px;
-}
-
-.browse-modal a {
-  color: var(--white);
-  text-decoration: underline;
-}
-
-.browse-modal h5 {
-  font-family: Poppins;
-  font-size: 24px;
-  font-weight: 300;
-  line-height: 1.25;
-  color: white;
-}
-
-.browse-modal .screenshots img {
-  margin-left: auto;
-  margin-right: auto;
-  width: 80%;
-}
-
-.browse-modal .screenshots {
-  margin-bottom: 2rem;
-}
-
-.browse-modal .description {
-  display: flex;
-  text-align: center;
-  background: #2e3f53;
-}
-
-.browse-modal .blurb {
-  font-size: 18px;
-  line-height: 1.33;
-  text-align: center;
-}
-
-.browse-modal .qr {
-  margin-left: 10px;
-  padding: 5px;
-  border-radius: 5px;
-  background: white;
-}
-
-.browse-modal .actions label input {
-  margin-right: 0.25rem;
-}
-
-.browse-modal .actions label {
-  margin-top: 0.5rem;
-  color: var(--white);
-  font-size: 12px;
-}
-
-.browse-modal .actions {
-  display: flex;
-  align-items: center;
-  -ms-flex-direction: column;
-  -moz-flex-direction: column;
-  -webkit-flex-direction: column;
-  flex-direction: column;
-}
-
-.pl-modal-browse .pl-modal-content.is-mobile .close {
-  position: absolute;
-  right: 15px;
-  top: 15px;
-}
-
-.pl-modal-browse .pl-modal-content.is-mobile .browse-modal {
-  margin: 20px 15px 0;
-}
-
-.pl-modal-browse .pl-modal-content.is-mobile {
-  position: relative;
-}
-
-.pl-modal-browse .pl-modal-content.is-desktop .screenshots img {
-  width: 70%;
-}
-
-.pl-modal-browse .pl-modal-content.is-desktop .screenshots {
-  padding-top: 3rem;
-  margin: -3rem -3rem 3rem -3rem;
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
-  background: #111d28;
-}
-
-.pl-modal-browse .pl-modal-content.is-desktop .description {
-  align-items: center;
-  text-align: left;
-}
-
-.pl-modal-browse .pl-modal-content.is-desktop .close {
-  position: absolute;
-  right: 20px;
-  top: 20px;
-}
-
-.pl-modal-browse .pl-modal-content.is-desktop .qr img {
-  height: 110px;
-  width: 110px;
-}
-
-.pl-modal-browse .pl-modal-content.is-desktop .qr {
-  padding: 20px;
-}
-
-.pl-modal-browse .pl-modal-content.is-desktop .actions .btn {
-  width: 100%;
-}
-
-.pl-modal-browse .pl-modal-content.is-desktop {
-  max-width: 655px !important;
-}
-
-.pl-modal-browse .close {
-  color: #98a7b4;
-  text-shadow: none;
 }
 
 .dropdown-menu .notification-row {
