--- a/shipping/app.css
+++ b/shipping/app.css
@@ -11182,6 +11182,21 @@ svg.help-icon:hover path {
   }
 }
 
+.historical-warning {
+  border-radius: 0.625rem;
+  border: solid 1px #ffc000;
+  background-color: rgba(255, 192, 0, 0.1);
+  padding: 0.75rem 1.25rem;
+  margin-bottom: 2rem;
+}
+
+.historical-warning {
+  border-radius: 0.625rem;
+  border: solid 1px #ffc000;
+  background-color: rgba(255, 192, 0, 0.1);
+  padding: 0.75rem 1.25rem;
+}
+
 .make-offer-modal {
   display: flex;
   align-items: center;
