--- a/shah/app.css
+++ b/shah/app.css
@@ -2308,10 +2308,6 @@
   background-image: url('images/growth/airbnb-icon.svg');
 }
 
-.attestation-badges .attestation-badge.website {
-  background-image: url('images/growth/website-icon.svg');
-}
-
 .attestation-badges .attestation-badge.google {
   background-image: url('images/growth/google-icon.svg');
 }
@@ -2334,6 +2330,10 @@
 
 .attestation-badges .attestation-badge.telegram {
   background-image: url('images/growth/telegram-badge.svg');
+}
+
+.attestation-badges .attestation-badge.website {
+  background-image: url('images/growth/website-icon.svg');
 }
 
 .attestation-badges .attestation-badge .badge-label.reward:before {
@@ -3121,12 +3121,6 @@
   background-image: url(images/identity/google-icon.svg);
 }
 
-.attestation.website {
-  border-color: #6331dd;
-  background-color: rgba(99, 49, 221, 75%);
-  background-image: url(images/identity/website-icon-light.svg);
-}
-
 .attestation.github {
   background-image: url(images/growth/github-icon.svg);
   background-size: 100%;
@@ -3151,6 +3145,12 @@
   border: 0;
 }
 
+.attestation.website {
+  border-color: #6331dd;
+  background-color: rgba(99, 49, 221, 75%);
+  background-image: url(images/identity/website-icon-light.svg);
+}
+
 .attestations-small .attestation {
   width: 1.5rem;
   height: 1.5rem;
@@ -3161,6 +3161,7 @@
 .availability-calendar {
   overflow-y: scroll;
   overflow-x: hidden;
+  -webkit-overflow-scrolling: touch;
   -ms-flex: 1;
   -moz-flex: 1;
   -webkit-flex: 1;
@@ -5143,10 +5144,6 @@
   background-image: url(images/growth/google-icon.svg);
 }
 
-.attestation-modal.website > div h2 {
-  background-image: url(images/growth/website-icon.svg);
-}
-
 .attestation-modal.kakao > div h2 {
   background-image: url(images/growth/kakao-icon.svg);
 }
@@ -5165,6 +5162,10 @@
 
 .attestation-modal.telegram > div h2 {
   background-image: url(images/growth/telegram-badge.svg);
+}
+
+.attestation-modal.website > div h2 {
+  background-image: url(images/growth/website-icon.svg);
 }
 
 .mobile-modal-light .attestation-modal {
@@ -5214,10 +5215,6 @@
   background-image: url(images/identity/google-icon.svg);
 }
 
-.mobile-modal-light .attestation-modal.website > div h2::before {
-  background-image: url(images/identity/website-icon-light.svg);
-}
-
 .mobile-modal-light .attestation-modal.kakao > div h2::before {
   background-image: url(images/identity/kakao-icon-large.svg);
 }
@@ -5236,6 +5233,10 @@
 
 .mobile-modal-light .attestation-modal.telegram > div h2::before {
   background-image: url(images/growth/telegram-badge.svg);
+}
+
+.mobile-modal-light .attestation-modal.website > div h2::before {
+  background-image: url(images/identity/website-icon-light.svg);
 }
 
 .mobile-modal-light .attestation-modal > div {
@@ -9558,6 +9559,10 @@
 }
 
 @media (max-width: 767.98px) {
+  .create-listing h1 {
+    font-size: 1.5rem;
+  }
+
   .create-listing .choose-category .category {
     font-size: 18px;
     padding: 1.25rem 0;
@@ -11194,12 +11199,20 @@ svg.help-icon:hover path {
   }
 }
 
-.historical-warning {
+.historical-warning-container {
+  margin-bottom: 2rem;
+}
+
+.historical-warning-container .historical-warning {
   border-radius: 0.625rem;
   border: solid 1px #ffc000;
   background-color: rgba(255, 192, 0, 0.1);
   padding: 0.75rem 1.25rem;
   margin-bottom: 2rem;
+}
+
+.historical-warning-container .btn {
+  padding: 0.75rem;
 }
 
 .historical-warning {
