--- a/shah/app.css
+++ b/shah/app.css
@@ -4492,39 +4492,6 @@
   font-weight: normal;
 }
 
-.withdraw-dust {
-  padding: 1.5rem 2rem;
-}
-
-.withdraw-dust .title {
-  font-size: 1.125rem;
-  margin-bottom: 1rem;
-}
-
-.withdraw-dust .balances .token-balance .token {
-  -ms-flex: 1;
-  -moz-flex: 1;
-  -webkit-flex: 1;
-  flex: 1;
-}
-
-.withdraw-dust .balances .token-balance .actions {
-  -ms-flex: auto 0 0;
-  -moz-flex: auto 0 0;
-  -webkit-flex: auto 0 0;
-  flex: auto 0 0;
-}
-
-.withdraw-dust .balances .token-balance {
-  margin-bottom: 0.75rem;
-  display: flex;
-  align-items: center;
-}
-
-.withdraw-dust .balances {
-  font-size: 0.875rem;
-}
-
 .settings {
   padding-top: 3rem;
   max-width: 720px;
@@ -5491,6 +5458,23 @@
   background: url(images/rockets-graphic.png) no-repeat;
   background-size: contain;
   margin-bottom: 1rem;
+}
+
+.promote-listing .how-works .promotions-disabled {
+  border: 1px solid #fec100;
+  background-color: rgba(254, 193, 0, 0.1);
+  border-radius: 5px;
+  text-align: center;
+  color: #000;
+  font-size: 0.875rem;
+  padding: 0.8rem;
+  font-weight: bold;
+}
+
+@media (max-width: 767.98px) {
+  .promotions-disabled {
+    width: 100%;
+  }
 }
 
 .promote-listing {
