--- a/shah/app.css
+++ b/shah/app.css
@@ -440,6 +440,10 @@
   background-image: url(images/okb-icon.svg);
 }
 
+.coin-logo.usdt {
+  background-image: url(images/usdt-icon.svg);
+}
+
 .reviews {
   margin-bottom: 2rem;
 }
@@ -1105,6 +1109,56 @@
   position: relative;
   top: 1em;
   left: 1em;
+}
+
+.signin-content h3:before {
+  height: 5rem;
+  display: inline-block;
+  background-image: url('images/nav/login-button.svg');
+  background-size: contain;
+  background-position: center;
+  content: '';
+  width: 100%;
+  margin-bottom: 1rem;
+  background-repeat: no-repeat;
+}
+
+.signin-content h3 {
+  margin-top: 1rem;
+  font-size: 1.125rem;
+  color: var(--black);
+}
+
+.signin-content p {
+  font-size: 0.875rem;
+  color: #6f8294;
+}
+
+.signin-content .btn {
+  max-width: 250px;
+  margin: 2rem auto 0 auto;
+}
+
+@media (max-width: 767.98px) {
+  .modal-content .signin-content .btn {
+    margin-top: auto;
+    max-width: 100%;
+    padding: 0.75rem 2rem;
+  }
+
+  .modal-content .signin-content {
+    display: flex;
+    text-align: center;
+    padding: 1.25rem;
+    -ms-flex: 1;
+    -moz-flex: 1;
+    -webkit-flex: 1;
+    flex: 1;
+    -ms-flex-direction: column;
+    -moz-flex-direction: column;
+    -webkit-flex-direction: column;
+    flex-direction: column;
+  }
 }
 
 .earnings-progress {
@@ -2430,6 +2484,10 @@
   background-image: url(images/okb-icon.svg);
 }
 
+.balances .account.usdt:before {
+  background-image: url(images/usdt-icon.svg);
+}
+
 .balances .account > div:nth-child(1) {
   font-size: 14px;
 }
@@ -3246,6 +3304,7 @@
 .availability-calendar .calendar .days > .day.end {
   background-color: #007fff;
   color: var(--white);
+  text-decoration: none;
 }
 
 .availability-calendar .calendar .days > .day.start {
@@ -7293,54 +7352,6 @@
   }
 }
 
-.onboard-signin h3:before {
-  height: 5rem;
-  display: inline-block;
-  background-image: url('images/nav/login-button.svg');
-  background-size: contain;
-  background-position: center;
-  content: '';
-  width: 100%;
-  margin-bottom: 1rem;
-  background-repeat: no-repeat;
-}
-
-.onboard-signin h3 {
-  margin-top: 1rem;
-  font-size: 1.125rem;
-  color: var(--black);
-}
-
-.onboard-signin p {
-  font-size: 0.875rem;
-  color: #6f8294;
-}
-
-.onboard-signin .btn {
-  max-width: 250px;
-  margin: 2rem auto 0 auto;
-}
-
-@media (max-width: 767.98px) {
-  .modal-content.onboard-signin-modal .onboard-signin .btn {
-    margin-top: auto;
-  }
-
-  .modal-content.onboard-signin-modal .onboard-signin {
-    display: flex;
-    text-align: center;
-    padding: 1.25rem;
-    -ms-flex: 1;
-    -moz-flex: 1;
-    -webkit-flex: 1;
-    flex: 1;
-    -ms-flex-direction: column;
-    -moz-flex-direction: column;
-    -webkit-flex-direction: column;
-    flex-direction: column;
-  }
-}
-
 .onboard .onboard-box .metamask-logo {
   background: url(images/metamask.svg) no-repeat center;
   background-size: 7rem;
@@ -8907,6 +8918,76 @@
   max-width: 600px;
 }
 
+.completed-action-groups {
+  margin: 1rem 0 3rem 0;
+  display: flex;
+  -ms-flex-direction: column;
+  -moz-flex-direction: column;
+  -webkit-flex-direction: column;
+  flex-direction: column;
+}
+
+.completed-action-groups .completed-action-group-item.title {
+  font-size: 0.875rem;
+  color: #455d75;
+  padding: 0.5rem 0;
+  text-align: left;
+  -ms-flex-direction: column;
+  -moz-flex-direction: column;
+  -webkit-flex-direction: column;
+  flex-direction: column;
+}
+
+.completed-action-groups .completed-action-group-item:last-child {
+  border-bottom: 0;
+}
+
+.completed-action-groups .completed-action-group-item .action-name {
+  font-weight: bold;
+  font-size: 1rem;
+  -ms-flex: 1;
+  -moz-flex: 1;
+  -webkit-flex: 1;
+  flex: 1;
+}
+
+.completed-action-groups .completed-action-group-item .action-reward:before {
+  content: '';
+  width: 1rem;
+  height: 1rem;
+  display: inline-block;
+  background-image: url('/images/ogn-icon-grayed-out.svg');
+  background-repeat: no-repeat;
+  background-size: 1rem;
+  background-position: center;
+  margin-right: 0.5rem;
+}
+
+.completed-action-groups .completed-action-group-item .action-reward {
+  font-weight: bold;
+  color: #c0cbd4;
+  font-size: 0.875rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  -ms-flex-direction: row;
+  -moz-flex-direction: row;
+  -webkit-flex-direction: row;
+  flex-direction: row;
+}
+
+.completed-action-groups .completed-action-group-item {
+  padding: 1rem 0;
+  border-bottom: 1px solid #c0cbd4;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  -ms-flex-direction: row;
+  -moz-flex-direction: row;
+  -webkit-flex-direction: row;
+  flex-direction: row;
+}
+
 .growth-banned.mobile img {
   margin-top: 4rem;
   width: 13.25rem;
@@ -10303,54 +10384,6 @@ svg.help-icon:hover path {
   padding-top: 4.5rem;
 }
 
-.dropdown-menu.profile .identity-info .create-identity h3 {
-  padding: 0.5rem 0;
-  margin-bottom: 0.5rem;
-  font-family: var(--default-font);
-  font-weight: bold;
-  color: #000;
-  font-size: 22px;
-  line-height: normal;
-}
-
-.dropdown-menu.profile .identity-info .create-identity .btn {
-  border-radius: 2rem;
-  padding: 0.5rem 2rem;
-  margin-bottom: 2rem;
-  font-size: 1.125rem;
-}
-
-.dropdown-menu.profile .identity-info .create-identity p {
-  font-size: 1.125rem;
-  margin-top: 1.75rem;
-  margin-bottom: 1.75rem;
-  color: #0d1d29;
-  line-height: normal;
-}
-
-.dropdown-menu.profile .identity-info .create-identity .balances {
-  border-top: 1px solid #dde6ea;
-  width: 100%;
-}
-
-.dropdown-menu.profile .identity-info .create-identity .strength {
-  margin: 0.25rem 0 1.5rem 0;
-}
-
-.dropdown-menu.profile .identity-info .create-identity {
-  margin-top: 3rem;
-  display: flex;
-  align-items: center;
-  -ms-flex: 1;
-  -moz-flex: 1;
-  -webkit-flex: 1;
-  flex: 1;
-  -ms-flex-direction: column;
-  -moz-flex-direction: column;
-  -webkit-flex-direction: column;
-  flex-direction: column;
-}
-
 .dropdown-menu.profile .identity-info .identity-loading {
   padding-top: 3rem;
 }
@@ -10651,29 +10684,6 @@ svg.help-icon:hover path {
   width: 300px;
 }
 
-.navbar .nav-item .dropdown-menu.signin h3:before {
-  height: 5rem;
-  display: inline-block;
-  background-image: url('images/nav/login-button.svg');
-  background-size: contain;
-  background-position: center;
-  content: '';
-  width: 100%;
-  margin-bottom: 1rem;
-  background-repeat: no-repeat;
-}
-
-.navbar .nav-item .dropdown-menu.signin h3 {
-  margin-top: 1rem;
-  font-size: 1.125rem;
-  color: var(--black);
-}
-
-.navbar .nav-item .dropdown-menu.signin p {
-  font-size: 0.875rem;
-  color: #6f8294;
-}
-
 .navbar .nav-item .dropdown-menu.signin .btn {
   max-width: 80%;
   margin: 0 auto;
@@ -10690,6 +10700,54 @@ svg.help-icon:hover path {
     content: '';
     background-repeat: no-repeat;
   }
+}
+
+.create-identity {
+  margin-top: 3rem;
+  display: flex;
+  align-items: center;
+  -ms-flex: 1;
+  -moz-flex: 1;
+  -webkit-flex: 1;
+  flex: 1;
+  -ms-flex-direction: column;
+  -moz-flex-direction: column;
+  -webkit-flex-direction: column;
+  flex-direction: column;
+}
+
+.create-identity h3 {
+  padding: 0.5rem 0;
+  margin-bottom: 0.5rem;
+  font-family: var(--default-font);
+  font-weight: bold;
+  color: #000;
+  font-size: 22px;
+  line-height: normal;
+}
+
+.create-identity .btn {
+  border-radius: 2rem;
+  padding: 0.5rem 2rem;
+  margin-bottom: 2rem;
+  font-size: 1.125rem;
+}
+
+.create-identity p {
+  font-size: 1.125rem;
+  margin-top: 1.75rem;
+  margin-bottom: 1.75rem;
+  color: #0d1d29;
+  line-height: normal;
+}
+
+.create-identity .balances {
+  border-top: 1px solid #dde6ea;
+  width: 100%;
+}
+
+.create-identity .strength {
+  margin: 0.25rem 0 1.5rem 0;
 }
 
 .dropdown-menu.profile .active-wallet-info .connected.proxy-acct > span {
